<resources>
    <string name="app_name">Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_point">.</string>
    <string name="_plus">+</string>
    <string name="_minus">-</string>
    <string name="_multiply">x</string>
    <string name="_divide">/</string>
    <string name="_clear">c</string>
    <string name="_equally">=</string>
    <string name="_percent">%</string>
    <string name="action_settings">Settings</string>
    <string name="radioThemeLight">Светлая</string>
    <string name="radioThemeDark">Темная</string>
    <string name="setting_title">Выберите тему</string>
    <string name="btn_back">Назад</string>
</resources>