<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/CalculatorMaterial">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="false"
        android:scaleType="fitStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_width"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/button_7"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView1"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_plus"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_width"
        android:text="@string/_plus"
        app:layout_constraintEnd_toStartOf="@+id/imageView1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintTop_toTopOf="@+id/button_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_width"
        android:text="@string/_6"
        app:layout_constraintEnd_toStartOf="@+id/button_plus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintTop_toTopOf="@+id/button_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_width"
        android:text="@string/_5"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_4"
        app:layout_constraintTop_toTopOf="@+id/button_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_width"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@+id/button_0"
        app:layout_constraintEnd_toStartOf="@+id/button_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView1"
        app:layout_constraintTop_toBottomOf="@+id/button_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_width"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView1"
        app:layout_constraintTop_toBottomOf="@+id/button_clear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_width"
        android:text="@string/_2"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintTop_toTopOf="@+id/button_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_width"
        android:text="@string/_3"
        app:layout_constraintEnd_toStartOf="@+id/button_divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintTop_toTopOf="@+id/button_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_width"
        android:text="@string/_8"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_7"
        app:layout_constraintTop_toTopOf="@+id/button_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_width"
        android:text="@string/_9"
        app:layout_constraintEnd_toStartOf="@+id/button_minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toTopOf="@+id/button_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_0"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_width"
        android:text="@string/_0"
        app:layout_constraintBottom_toTopOf="@+id/imageView1"
        app:layout_constraintEnd_toEndOf="@+id/button_8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button_7"
        app:layout_constraintTop_toBottomOf="@+id/button_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_point"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_width"
        android:text="@string/_point"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/button_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_divide"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_width"
        android:text="@string/_divide"
        app:layout_constraintEnd_toStartOf="@+id/imageView1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_3"
        app:layout_constraintTop_toTopOf="@+id/button_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_minus"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_width"
        android:text="@string/_minus"
        app:layout_constraintEnd_toStartOf="@+id/imageView1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_9"
        app:layout_constraintTop_toTopOf="@+id/button_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_multiply"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_width"
        android:text="@string/_multiply"
        app:layout_constraintStart_toEndOf="@+id/button_percent"
        app:layout_constraintTop_toTopOf="@+id/button_percent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_clear"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_width"
        android:text="@string/_clear"
        app:layout_constraintBottom_toTopOf="@+id/button_1"
        app:layout_constraintEnd_toEndOf="@+id/button_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button_1"
        app:layout_constraintTop_toBottomOf="@+id/textViewScreen" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equally"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_width"
        android:text="@string/_equally"
        app:layout_constraintStart_toEndOf="@+id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/button_minus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_percent"
        android:layout_width="@dimen/btn_width"
        android:layout_height="@dimen/btn_width"
        android:text="@string/_percent"
        app:layout_constraintStart_toEndOf="@+id/button_clear"
        app:layout_constraintTop_toTopOf="@+id/button_clear" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textViewScreen"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_width"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:gravity="right|center"
        android:paddingEnd="10dp"
        android:text="0"
        android:textSize="@dimen/size_screen"
        app:layout_constraintBottom_toTopOf="@+id/button_clear"
        app:layout_constraintEnd_toEndOf="@+id/button_multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button_clear"
        app:layout_constraintTop_toBottomOf="@+id/imageView1" />

</androidx.constraintlayout.widget.ConstraintLayout>